--- a/AllocateQ3-ConsoleInteraction/AllocateQ3-ConsoleInteraction.csproj
+++ b/AllocateQ3-ConsoleInteraction/AllocateQ3-ConsoleInteraction.csproj
@@ -26,6 +26,9 @@
     <None Update="Animals.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
